--- a/admissions.html
+++ b/admissions.html
@@ -149,8 +149,12 @@
      <header class="main-header">
     <div class="container header-content">
         <div class="logo">
-            <img src="school logo.jpg" alt="NDPS Logo">
-            <h1>NATIONAL DELHI PUBLIC SCHOOL</h1>
+             <a href="index.html" style="display: flex; align-items: center; gap: 10px; text-decoration: none;">
+        <img src="school logo.jpg" alt="NDPS Logo" class="school-logo">
+        <div class="logo-text">
+            <h1 style="margin: 0; color: #004d99; font-size: 1.2rem;">NATIONAL DELHI PUBLIC SCHOOL</h1>
+        </div>
+    </a>
         </div>
 
         <div class="hamburger" id="hamburger-btn">
@@ -440,4 +444,5 @@
     }
 }); </script>
     </body>
+
 </html>
