--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
                         <div class="card-icon">📞</div>
                         <h4>General Inquiry</h4>
                         <p>For all general questions and school information.</p>
-                        <p><strong>Phone:</strong> [General Phone Number]</p>
+                        <p><strong>Phone:</strong> 9934778546</p>
                         <p><strong>Email:</strong> <a href="mailto:info@ndps.in">info@ndps.in</a></p>
                     </div>
 
@@ -64,7 +64,7 @@
                         <div class="card-icon">📚</div>
                         <h4>Admissions Office</h4>
                         <p>Regarding new admissions, eligibility, and fee structure queries.</p>
-                        <p><strong>Phone:</strong> [Admissions Office Phone Number]</p>
+                        <p><strong>Phone:</strong> 7001124130</p>
                         <p><strong>Email:</strong> <a href="mailto:admissions@ndps.in">admissions@ndps.in</a></p>
                     </div>
 
@@ -89,8 +89,8 @@
                         <h2>Our Office Location</h2>
     
                         <a href="https://www.google.com/maps/search/?api=13" target="_blank" class="address-link">
-                        <p>Your Full Street Address Here</p>
-                        <p>City, State, Pincode</p>
+                        <p>Nandapatti , Benipur </p>
+                        <p>DARBHANA, BIHAR, 847201</p>
                     </a>
     
                        <a href="https://www.google.com/maps/search/?api=14" target="_blank" class="directions-button">
@@ -161,3 +161,4 @@
 </body>
 
 </html>
+
