Fix HTML encoding issues in about.html

--- a/about.html
+++ b/about.html
@@ -179,7 +179,7 @@
             <div class="leader-card">
                 <img src="principal.jpg" alt="Principal Image" class="principal"> 
                 <h4>Mr. Shyam Bahadur Chettri</h4>
-                <p class="title">Principal, Senior Wing</p>
+                <p class="title">Principal, NDPS</p>
                 <p class="bio">An inspiring leader committed to providing the best learning environment and ensuring smooth day-to-day operations and student discipline.</p>
             </div>
         </div>
@@ -256,3 +256,4 @@
     </body>
 
 </html>
+
