--- a/contact.html
+++ b/contact.html
@@ -100,13 +100,18 @@
 
                     <div class="contact-form-section">
                         <h3>Send Us a Message</h3>
-                        <form action="contact_processor.php" method="POST" class="unique-contact-form">
-                            <input type="text" id="name" name="name" placeholder="Your Name" required>
-                            <input type="email" id="email" name="email" placeholder="Your Email" required>
-                            <input type="text" id="subject" name="subject" placeholder="Subject" required>
-                            <textarea id="message" name="message" rows="5" placeholder="Your Message" required></textarea>
-                            <button type="submit" class="cta-button">Send Message</button>
-                        </form>
+                        <form action="https://formspree.io/f/mojavdej" method="POST">
+    <div class="form-group">
+        <input type="text" name="name" placeholder="Your Name" required>
+    </div>
+    <div class="form-group">
+        <input type="email" name="email" placeholder="Your Email" required>
+    </div>
+    <div class="form-group">
+        <textarea name="message" placeholder="Your Message" required></textarea>
+    </div>
+    <button type="submit" class="cta-button">Send Message</button>
+</form>
                     </div>
                 </div>
             </section>
@@ -161,4 +166,5 @@
 </body>
 
 </html>
+
 
