--- a/contact.html
+++ b/contact.html
@@ -100,7 +100,7 @@
 
                     <div class="contact-form-section">
                         <h3>Send Us a Message</h3>
-                        <form action="https://formspree.io/f/mojavdej" method="POST">
+                        <form action="https://formspree.io/f/mojavdej" method="POST" class="unique-contact-form">
     <div class="form-group">
         <input type="text" name="name" placeholder="Your Name" required>
     </div>
@@ -122,8 +122,8 @@
         <div class="container footer-grid">
             <div class="footer-contact">
                 <h4>Contact NDPS</h4>
-                <p>Address: [Your School Address, Delhi, India]</p>
-                <p>Phone: [Your Phone Number]</p>
+                <p>Address: [Nandapatti,Benipur , Darbhanga,Bihar9934778546</p>
+                <p>Phone: 9934778546</p>
                 <p>Email: <a href="mailto:info@ndps.in">info@ndps.in</a></p>
             </div>
             <div class="footer-links">
@@ -163,8 +163,10 @@
         });
     }
 }); </script>
+    
 </body>
 
 </html>
+
 
 
