--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
         <div class="container footer-grid">
             <div class="footer-contact">
                 <h4>Contact NDPS</h4>
-                <p>Address: Nandapatti, Bemipur, Darbhanga, Bihar</p>
-                <p>Phone: 8235340663</p>
+                <p>Address: Nandapatti, Benipur, Darbhanga, Bihar</p>
+                <p>Phone: 9934778546</p>
                 <p>Email: <a href="mailto:info@ndps.in">info@ndps.in</a></p>
             </div>
             <div class="footer-links">
@@ -136,5 +136,6 @@
 </html>
     
     
+
 
 
