Fix HTML structure and update footer contact info

--- a/academics.html
+++ b/academics.html
@@ -184,8 +184,8 @@
         <div class="container footer-grid">
             <div class="footer-contact">
                 <h4>Contact NDPS</h4>
-                <p>Address: Nandapatti, Bemipur, Darbhanga, Bihar</p>
-                <p>Phone: 8235340663</p>
+                <p>Address: Nandapatti, Benipur, Darbhanga, Bihar</p>
+                <p>Phone: 9934778546</p>
                 <p>Email: <a href="mailto:info@ndps.in">info@ndps.in</a></p>
             </div>
             <div class="footer-links">
@@ -239,4 +239,5 @@
     </body>
 
 </html>
+
 
