--- a/admissions.html
+++ b/admissions.html
@@ -391,9 +391,10 @@
         <div class="container footer-grid">
             <div class="footer-contact">
                 <h4>Contact NDPS</h4>
-                <p>Address: Nandapatti, Bemipur, Darbhanga, Bihar</p>
-                <p>Phone: 8235340663</p>
+                <p>Address: Nandapatti, Benipur, Darbhanga, Bihar</p>
+                <p>Phone: 9934778546</p>
                 <p>Email: <a href="mailto:info@ndps.in">info@ndps.in</a></p>
+            </div>
             </div>
             <div class="footer-links">
                 <h4>Quick Links</h4>
@@ -446,3 +447,4 @@
     </body>
 
 </html>
+
