Fix HTML formatting and structure in contact.html

--- a/contact.html
+++ b/contact.html
@@ -120,9 +120,9 @@
 
     <footer class="main-footer">
         <div class="container footer-grid">
-            <div class="footer-contact">
+             <div class="footer-contact">
                 <h4>Contact NDPS</h4>
-                <p>Address: [Nandapatti,Benipur , Darbhanga,Bihar9934778546</p>
+                <p>Address: Nandapatti, Benipur, Darbhanga, Bihar</p>
                 <p>Phone: 9934778546</p>
                 <p>Email: <a href="mailto:info@ndps.in">info@ndps.in</a></p>
             </div>
@@ -167,6 +167,7 @@
 </body>
 
 </html>
+
 
 
 
