--- a/news.html
+++ b/news.html
@@ -239,10 +239,10 @@
     </div>
      <footer class="main-footer">
         <div class="container footer-grid">
-            <div class="footer-contact">
+           <div class="footer-contact">
                 <h4>Contact NDPS</h4>
-                <p>Address: Nandapatti, Bemipur, Darbhanga, Bihar</p>
-                <p>Phone: 8235340663</p>
+                <p>Address: Nandapatti, Benipur, Darbhanga, Bihar</p>
+                <p>Phone: 9934778546</p>
                 <p>Email: <a href="mailto:info@ndps.in">info@ndps.in</a></p>
             </div>
             <div class="footer-links">
@@ -296,4 +296,5 @@
     </body>
 
 </html>
+
 
