--- a/fee_structure.html
+++ b/fee_structure.html
@@ -84,7 +84,7 @@
                     <td>₹ 16,500 + Annual Charge Share</td>
                 </tr>
                 <tr>
-                    <td>Secondary/Sr. Secondary (Class IX - XII)</td>
+                    <td>Secondary (Class IX - X)</td>
                     <td>₹ 25,000</td>
                     <td>₹ 9,500</td>
                     <td>₹ 6,800</td>
@@ -106,4 +106,5 @@
     </div>
     
     </body>
+
 </html>
